--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 244, 98, 58;
+  --bs-primary-rgb: 255,0,75;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -2370,7 +2370,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #f4623a;
+  background-color: #f4a;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2836,7 +2836,7 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #f4623a;
+  --bs-btn-bg: rgba(255, 0, 75, 0.8);
   --bs-btn-border-color: #f4623a;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #cf5331;
@@ -6686,10 +6686,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #f4623a !important;
+  color: pink !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #c34e2e !important;
+  color: pink !important;
 }
 
 .link-secondary {
@@ -6714,10 +6714,10 @@ textarea.form-control-lg {
 }
 
 .link-warning {
-  color: #ffc107 !important;
+  color: var(--bs-pink) !important;
 }
 .link-warning:hover, .link-warning:focus {
-  color: #ffcd39 !important;
+  color: var(--bs-pink) !important;
 }
 
 .link-danger {
@@ -10836,6 +10836,7 @@ body {
 .btn-xl {
   padding: 1.25rem 2.25rem;
   font-size: 0.85rem;
+  
   font-weight: 700;
   text-transform: uppercase;
   border: none;
@@ -10846,7 +10847,7 @@ hr.divider {
   height: 0.2rem;
   max-width: 3.25rem;
   margin: 1.5rem auto;
-  background-color: #f4623a;
+  background-color: #f46a;
   opacity: 1;
 }
 
@@ -10872,10 +10873,10 @@ hr.divider-light {
   padding: 0.75rem 0;
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: #f46a;
+  color: #f46;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #f46a !important;
+  color: #f46 !important;
 }
 @media (min-width: 992px) {
   #mainNav {
@@ -10883,7 +10884,7 @@ hr.divider-light {
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255,  0, 75);
   }
   #mainNav .navbar-brand:hover {
     color: #fff;
@@ -10903,16 +10904,16 @@ hr.divider-light {
     background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: #212529;
+    color:rgba(255,  0, 75);
   }
   #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #f46a;
+    color: #f46;
   }
   #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link {
     color: #212529;
   }
   #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
-    color: #f46a;
+    color: #f46;
   }
 }
 
@@ -10967,7 +10968,7 @@ header.masthead h1, header.masthead .h1 {
   text-align: center;
   opacity: 0;
   color: #fff;
-  background: rgba(244, 98, 58, 0.9);
+  background: rgba(255,0,75);
   transition: opacity 0.25s ease;
   text-align: center;
 }
